Navbar bug on mobile fixed

--- a/src/css/Dashboard.css
+++ b/src/css/Dashboard.css
@@ -9,7 +9,7 @@
 
 .big-navbar-container {
     position: sticky;
-    bottom: 0rem;
+    bottom: 0;
     width: 100%;
     background-color: rgb(50, 50, 50);
     display: flex;
@@ -51,4 +51,8 @@
 .nav-active {
     background-color: lightblue !important;
     color: black !important;
+}
+
+.fixed {
+    position: fixed;
 }
